--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".view.activity.LoginActivity"/>
         <activity android:name=".view.activity.HomeActivity"/>
+        <activity android:name=".view.activity.RegistrationActivity"/>
 
     </application>
 </manifest>
